[package]
name = "are_you_using_linux-rust"
version = "0.1.0"
edition = "2021"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
description = "you use this if you want to check your OS with little joke."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
